update all plugins

--- a/src/js/outer/datePicker/1.0.1/less/cdn_index.less
+++ b/src/js/outer/datePicker/1.0.1/less/cdn_index.less
@@ -1,5 +1,5 @@
 @import "../../../../../less/inner/theme/default";
-.@{zr-prefix}-datepicker,.@{zr-prefix}-datepicker-week{
+.@{nv-prefix}-datepicker,.@{nv-prefix}-datepicker-week{
   width:100%;
   color:@grey-8;
   font-size: 14px;
@@ -10,7 +10,7 @@
   }
 }
 
-.@{zr-prefix}-datepicker-tabs{
+.@{nv-prefix}-datepicker-tabs{
   width:256px;
   height:34px;
   margin: 0 auto 21px;
@@ -20,7 +20,7 @@
   border:1px solid @primary-6;
 }
 
-.@{zr-prefix}-datepicker-tab{
+.@{nv-prefix}-datepicker-tab{
   width:127px;
   height:32px;
   line-height: 32px;
@@ -28,51 +28,51 @@
   display: inline-block;
   cursor: pointer;
 }
-.@{zr-prefix}-datepicker-tab-selected{
+.@{nv-prefix}-datepicker-tab-selected{
   background: @primary-6;
   color: @grey-1;
 }
 
-.@{zr-prefix}-datepicker-header-date,.@{zr-prefix}-datepicker-header-month,.@{zr-prefix}-datepicker-header-year,.zr-datepicker-header-time,.zr-datepicker-header-week{
+.@{nv-prefix}-datepicker-header-date,.@{nv-prefix}-datepicker-header-month,.@{nv-prefix}-datepicker-header-year,.nv-datepicker-header-time,.nv-datepicker-header-week{
   height:25px;
   line-height: 25px;
   padding: 0 22.5px;
   width:100%;
   line-height: 25px;
-  .@{zr-prefix}-datepicker-prev-year:hover,.@{zr-prefix}-datepicker-prev-month:hover,.@{zr-prefix}-datepicker-next-year:hover,.@{zr-prefix}-datepicker-next-month:hover{
+  .@{nv-prefix}-datepicker-prev-year:hover,.@{nv-prefix}-datepicker-prev-month:hover,.@{nv-prefix}-datepicker-next-year:hover,.@{nv-prefix}-datepicker-next-month:hover{
     color:@grey-10;
   }
   margin-bottom: 14px;
 }
-.@{zr-prefix}-datepicker-inline{
+.@{nv-prefix}-datepicker-inline{
   display:block;
   float: left;
 }
-.@{zr-prefix}-datepicker-prev-year,.@{zr-prefix}-datepicker-prev-month{
+.@{nv-prefix}-datepicker-prev-year,.@{nv-prefix}-datepicker-prev-month{
   padding-right: 12px;
   cursor: pointer;
 }
-.@{zr-prefix}-datepicker-next-year,.@{zr-prefix}-datepicker-next-month{
+.@{nv-prefix}-datepicker-next-year,.@{nv-prefix}-datepicker-next-month{
   padding-left: 12px;
   cursor: pointer;
 }
-.@{zr-prefix}-datepicker-date-title{
+.@{nv-prefix}-datepicker-date-title{
   width:146px;
   text-align: center;
 }
 
-.@{zr-prefix}-datepicker-month-title,.@{zr-prefix}-datepicker-year-title{
+.@{nv-prefix}-datepicker-month-title,.@{nv-prefix}-datepicker-year-title{
   width:198px;
   text-align: center;
 }
-.@{zr-prefix}-datepicker-year-title{
+.@{nv-prefix}-datepicker-year-title{
   color:@primary-6
 }
-.@{zr-prefix}-datepicker-time-title{
+.@{nv-prefix}-datepicker-time-title{
   text-align: center;
   width:100%;
 }
-.@{zr-prefix}-datepicker-row,.@{zr-prefix}-datepicker-row-month,.@{zr-prefix}-datepicker-row-year{
+.@{nv-prefix}-datepicker-row,.@{nv-prefix}-datepicker-row-month,.@{nv-prefix}-datepicker-row-year{
   margin: 0 10px 5px;
   &:after{
     content: ' ';
@@ -81,22 +81,22 @@
     height: 0;
   }
 }
-.@{zr-prefix}-datepicker-content-time{
+.@{nv-prefix}-datepicker-content-time{
   margin: 3px 30px;
-  .@{zr-prefix}-datepicker-col-time-choose{
+  .@{nv-prefix}-datepicker-col-time-choose{
     background: @grey-4;
     &:hover{
       background: @grey-4;
     }
   }
 }
-.@{zr-prefix}-datepicker-row-time{
+.@{nv-prefix}-datepicker-row-time{
   width:79px;
   max-height: 210px;
   display: inline-block;
   overflow: auto;
 }
-.@{zr-prefix}-datepicker-col-year{
+.@{nv-prefix}-datepicker-col-year{
   display: inline-block;
   margin: 18px -3px 20px;
   width:70px;
@@ -116,7 +116,7 @@
     }
   }
 }
-.@{zr-prefix}-datepicker-col-month{
+.@{nv-prefix}-datepicker-col-month{
   display: inline-block;
   margin: 0 -3px 10px;
   //width:93px;
@@ -137,7 +137,7 @@
     }
   }
 }
-.@{zr-prefix}-datepicker-col-time{
+.@{nv-prefix}-datepicker-col-time{
   text-align: center;
   display: block;
   margin: 0 auto;
@@ -150,11 +150,11 @@
   }
 }
 
-.@{zr-prefix}-datepicker-row-time-minute{
+.@{nv-prefix}-datepicker-row-time-minute{
   border-left:1px solid @grey-6;
   border-right:1px solid @grey-6;
 }
-.@{zr-prefix}-datepicker-col{
+.@{nv-prefix}-datepicker-col{
   display: block;
   width:40px;
   float: left;
@@ -173,26 +173,26 @@
       background: @primary-2;
     }
   }
-  &.@{zr-prefix}-datepicker-choose-col{
+  &.@{nv-prefix}-datepicker-choose-col{
     background: @primary-2;
   }
 }
 
-.@{zr-prefix}-datepicker-line-default{
+.@{nv-prefix}-datepicker-line-default{
   background: @primary-2;
   border-radius: 20px;
 }
-.@{zr-prefix}-datepicker-line-choose{
+.@{nv-prefix}-datepicker-line-choose{
   background: @primary-6;
   border-radius: 20px;
   color: @grey-1;
 }
-.@{zr-prefix}-datepicker-footer{
+.@{nv-prefix}-datepicker-footer{
   border-top:1px solid @grey-4;
   height:39px;
   line-height: 39px;
 }
-.@{zr-prefix}-datepicker-btn-clear{
+.@{nv-prefix}-datepicker-btn-clear{
   float: left;
   margin:8px 24px;
   height:24px;
@@ -204,19 +204,19 @@
     color:@primary-5;
   }
 }
-.@{zr-prefix}-datepicker-btn-tools{
+.@{nv-prefix}-datepicker-btn-tools{
   float: right;
   padding-right: 15px;
   line-height: 24px;
 }
-.@{zr-prefix}-datepicker-btn{
+.@{nv-prefix}-datepicker-btn{
   margin:8px 5px;
   height:24px;
   padding: 0 10px;
   display: inline-block;
   border-radius: 4px;
 }
-.@{zr-prefix}-datepicker-btn-now{
+.@{nv-prefix}-datepicker-btn-now{
   border: 1px solid @grey-6;
   color: @grey-8;
   &:hover{
@@ -224,7 +224,7 @@
     color: @primary-6;
   }
 }
-.@{zr-prefix}-datepicker-btn-ok{
+.@{nv-prefix}-datepicker-btn-ok{
   border: 1px solid @primary-6;
   color: @grey-1;
   background: @primary-6;
@@ -234,7 +234,7 @@
     background: @primary-5;
   }
 }
-.@{zr-prefix}-datepicker-wrap,.@{zr-prefix}-datepicker-wrap-week{
+.@{nv-prefix}-datepicker-wrap,.@{nv-prefix}-datepicker-wrap-week{
   display: none;
   width:300px;
   position: absolute;
@@ -243,10 +243,10 @@
   background: @grey-1;
   box-shadow: 0 2px 9px 0 rgba(0,0,0,0.12);;
 }
-.@{zr-prefix}-datepicker-wrap-week{
+.@{nv-prefix}-datepicker-wrap-week{
   width:340px;
 }
-.@{zr-prefix}-datepicker-default{
+.@{nv-prefix}-datepicker-default{
   span{
     border:1px solid @primary-6;
     border-radius: 16px;
@@ -256,7 +256,7 @@
   }
 }
 
-.@{zr-prefix}-datepicker-choose,.@{zr-prefix}-datepicker-range-default{
+.@{nv-prefix}-datepicker-choose,.@{nv-prefix}-datepicker-range-default{
   span{
     border:1px solid @primary-6;
     background: @primary-6;
@@ -269,33 +269,33 @@
     }
   }
 }
-.@{zr-prefix}-datepicker-unrange{
+.@{nv-prefix}-datepicker-unrange{
   color: @grey-7;
 }
-.@{zr-prefix}-datepicker-header{
+.@{nv-prefix}-datepicker-header{
   display: none;
 }
-.@{zr-prefix}-datepicker-header-show{
+.@{nv-prefix}-datepicker-header-show{
   display: block;
 }
-.@{zr-prefix}-datepicker-content{
+.@{nv-prefix}-datepicker-content{
   padding-bottom: 14px;
   display: none;
 }
-.@{zr-prefix}-datepicker-content-show{
+.@{nv-prefix}-datepicker-content-show{
   display: block;
 }
-.@{zr-prefix}-datepicker-year-text,.@{zr-prefix}-datepicker-month-text{
+.@{nv-prefix}-datepicker-year-text,.@{nv-prefix}-datepicker-month-text{
   cursor: pointer;
 }
-.@{zr-prefix}-datepicker-readonly{
+.@{nv-prefix}-datepicker-readonly{
   color:@grey-6;
   span:hover{
     color:@grey-6;
     background: @grey-1;
   }
 }
-.@{zr-prefix}-datepicker-row-disable{
+.@{nv-prefix}-datepicker-row-disable{
   background: @grey-4;
   cursor: not-allowed;
   &:hover{
@@ -303,51 +303,51 @@
   }
 }
 //
-.@{zr-prefix}-datepicker-wrap-week{
-  .@{zr-prefix}-datepicker-col-year{
+.@{nv-prefix}-datepicker-wrap-week{
+  .@{nv-prefix}-datepicker-col-year{
     width:85px;
   }
-  .@{zr-prefix}-datepicker-date-title{
+  .@{nv-prefix}-datepicker-date-title{
     width:190px;
     text-align: center;
   }
-  .@{zr-prefix}-datepicker-year-title,.@{zr-prefix}-datepicker-month-title{
+  .@{nv-prefix}-datepicker-year-title,.@{nv-prefix}-datepicker-month-title{
     width:242px;
   }
-  .@{zr-prefix}-datepicker-line-default{
+  .@{nv-prefix}-datepicker-line-default{
     cursor: pointer;
     span:hover{
       background: none;
     }
   }
-  .@{zr-prefix}-datepicker-line-choose {
-    .@{zr-prefix}-datepicker-col span:hover{
+  .@{nv-prefix}-datepicker-line-choose {
+    .@{nv-prefix}-datepicker-col span:hover{
       background: none;
     }
-    .@{zr-prefix}-datepicker-readonly{
+    .@{nv-prefix}-datepicker-readonly{
       color:@grey-5;
     }
-    .@{zr-prefix}-datepicker-readonly span:hover{
+    .@{nv-prefix}-datepicker-readonly span:hover{
       background: none;
       color:@grey-5;
     }
-    .@{zr-prefix}-datepicker-unrange span{
+    .@{nv-prefix}-datepicker-unrange span{
       color:@grey-5;
     }
   }
 }
-.@{zr-prefix}-datepicker-range{
+.@{nv-prefix}-datepicker-range{
    width:600px;
-  .@{zr-prefix}-datepicker-content-range{
+  .@{nv-prefix}-datepicker-content-range{
     width:50%;
     display: block;
     float: left;
   }
 }
-.@{zr-prefix}-datepicker-clear{
+.@{nv-prefix}-datepicker-clear{
   clear:both;
 }
-.@{zr-prefix}-datepicker-unchoose{
+.@{nv-prefix}-datepicker-unchoose{
   background: rgba(221, 221, 221, 0.28);
   span{
     cursor: not-allowed;
@@ -355,13 +355,13 @@
       background: none;
     }
   }
-  &.@{zr-prefix}-datepicker-col-year{
+  &.@{nv-prefix}-datepicker-col-year{
     background: rgba(221, 221, 221, 1);
   }
-  &.@{zr-prefix}-datepicker-col-month{
+  &.@{nv-prefix}-datepicker-col-month{
     background: rgba(221, 221, 221, 1);
   }
-  &.zr-datepicker-row{
+  &.nv-datepicker-row{
     background: rgba(221, 221, 221, 1);
     &:hover{
       border-radius: 0 !important;
