--- a/src/less/inner/core/base.less
+++ b/src/less/inner/core/base.less
@@ -183,7 +183,7 @@ a:active{
   -khtml-user-select: none; /*早期浏览器*/
   user-select: none;
 }
-html [class*=" zricon-"]:before,html [class^=zricon-]:before{
+html [class*=" nvicon-"]:before,html [class^=nvicon-]:before{
   margin: 0;
   padding: 0;
 }
