--- a/src/less/inner/modules/breadcrumb.less
+++ b/src/less/inner/modules/breadcrumb.less
@@ -1,21 +1,21 @@
 /*
  * breadcrumb
  */
-.@{zr-prefix}-breadcrumb {
+.@{nv-prefix}-breadcrumb {
   font-size: @font-size-base;
   color: @breadcrumb-primary-color;
-  .@{zr-prefix}-breadcrumb-normal {
+  .@{nv-prefix}-breadcrumb-normal {
     font-style: normal;
   }
-  .@{zr-prefix}-breadcrumb-current {
+  .@{nv-prefix}-breadcrumb-current {
     color: @breadcrumb-color-current;
   }
 
-  .@{zr-prefix}-breadcrumb-icon {
+  .@{nv-prefix}-breadcrumb-icon {
     margin-left: @breadcrumb-icon-margin;
     font-size: @breadcrumb-arrow-size;
   }
-  .@{zr-prefix}-breadcrumb-link,a{
+  .@{nv-prefix}-breadcrumb-link,a{
     color: @breadcrumb-primary-color;
     &:hover {
       color: @primary-6;
