--- a/src/less/inner/modules/card.less
+++ b/src/less/inner/modules/card.less
@@ -1,12 +1,12 @@
 ﻿
 
-.@{zr-prefix}-card{
+.@{nv-prefix}-card{
   width: 100%;
   border: @border-width-base @border-style-base @border-color-base;
   background-color: @component-background;
   border-radius: @btn-border-radius-base;
 }
-.@{zr-prefix}-card-title{
+.@{nv-prefix}-card-title{
   width: 100%;
   font-size: @font-size-base;
   height: @input-height-lg;
@@ -19,59 +19,59 @@
     font-size: @font-size-base+4;
     font-weight: @font-weight;
   }
-  .@{zr-prefix}-card-operate{
+  .@{nv-prefix}-card-operate{
     float: right;
     margin-right: @input-padding-vertical-base*4;
     cursor: pointer;
     opacity: .65;
   }
-  .@{zr-prefix}-dropdown{
+  .@{nv-prefix}-dropdown{
     float: right;
-    .@{zr-prefix}-dropdown-menu{
+    .@{nv-prefix}-dropdown-menu{
       top: 40px;
       left: -54px;
     }
   }
 }
-.@{zr-prefix}-card-content{
+.@{nv-prefix}-card-content{
   padding: @input-padding-vertical-base*6 @input-padding-vertical-base*4;
   color:@text-color;
 }
-.@{zr-prefix}-card-noborder{
+.@{nv-prefix}-card-noborder{
   border: none;
 }
-.@{zr-prefix}-card-pic{
+.@{nv-prefix}-card-pic{
   width: 100%;
-  .@{zr-prefix}-card-img{
+  .@{nv-prefix}-card-img{
     width: 100%;
   }
-  .@{zr-prefix}-card-title{
+  .@{nv-prefix}-card-title{
     height: auto;
     line-height: 1;
     padding-top: @input-padding-vertical-base*4;
     border-bottom: none;
     font-weight: normal;
   }
-  .@{zr-prefix}-card-content{
+  .@{nv-prefix}-card-content{
     padding: 0 @input-padding-vertical-base*4 @input-padding-vertical-base*6 @input-padding-vertical-base*4;
   }
-  .@{zr-prefix}-card-left{
+  .@{nv-prefix}-card-left{
     float: left;
   }
-  .@{zr-prefix}-card-right{
+  .@{nv-prefix}-card-right{
     float: right;
   }
 }
 
-.@{zr-prefix}-card-group{
-  .@{zr-prefix}-card{
+.@{nv-prefix}-card-group{
+  .@{nv-prefix}-card{
     width: 200px;
     height: 120px;
     line-height: 120px;
     text-align: center;
     display: inline-block;
     margin: 16px 8px 16px 10px;
-    .@{zr-prefix}-card-content{
+    .@{nv-prefix}-card-content{
       padding: 0 0;
     }
   }
