--- a/src/less/inner/modules/divide.less
+++ b/src/less/inner/modules/divide.less
@@ -1,7 +1,7 @@
 ﻿/*
  * divide
  */
-.@{zr-prefix}-divide {
+.@{nv-prefix}-divide {
   line-height: @line-height-base;
   box-sizing: border-box;
 }
@@ -11,14 +11,14 @@
   border: 0;
   clear: both;
 }
-.@{zr-prefix}-divide-horizontal {
+.@{nv-prefix}-divide-horizontal {
   .divide-normal();
   border-top: @border-width-base @border-style-base @normal-color;
 }
-.@{zr-prefix}-divide-dashed {
+.@{nv-prefix}-divide-dashed {
   border-top: @border-width-base @divide-border-style @normal-color;
 }
-.@{zr-prefix}-divide-fieldset {
+.@{nv-prefix}-divide-fieldset {
   position: relative;
   text-align: center;
   margin:@padding-md  0;
@@ -31,7 +31,7 @@
     border-top: @border-width-base @border-style-base @normal-color;
     z-index: -1;
   }
-  .@{zr-prefix}-divide-legend {
+  .@{nv-prefix}-divide-legend {
     background-color: #FFF;
     display: inline-block;
     padding: 0 @padding-lg;
@@ -40,11 +40,11 @@
     font-size: @font-size-lg;
   }
 }
-.@{zr-prefix}-divide-vertical {
+.@{nv-prefix}-divide-vertical {
   margin: 0 @padding-sm - 2px;
   color: @divide-default-color;
 }
-.@{zr-prefix}-divide-unlink,.@{zr-prefix}-divide-unlink:hover {
+.@{nv-prefix}-divide-unlink,.@{nv-prefix}-divide-unlink:hover {
   color: @grey-8;
 }
 
