--- a/src/less/inner/modules/form.less
+++ b/src/less/inner/modules/form.less
@@ -1,49 +1,49 @@
-.zr-form{
-  .zr-form-item{
+.nv-form{
+  .nv-form-item{
     margin-bottom: 24px;
     //line-height: 32px;
   }
-  .zr-form-item-control{
+  .nv-form-item-control{
     display: inline-block;
   }
-  .zr-radio-module{
+  .nv-radio-module{
     display: inline-block;
     padding-top: 8px;
   }
-  .zr-checkbox-module{
+  .nv-checkbox-module{
     margin-right: 0;
     display: inline-block;
     padding-top: 8px;
   }
-  .zr-form-item-title{
+  .nv-form-item-title{
     text-align: right;
     padding-top: 4px;
     line-height: normal;
   }
-  .zr-form-btn{
+  .nv-form-btn{
     font-size: 0;
-    .zr-btn{
+    .nv-btn{
       margin-right: 8px;
     }
   }
   //错误提示
-  .zr-form-item-error{
-    .zr-input,.zr-textarea{
+  .nv-form-item-error{
+    .nv-input,.nv-textarea{
       border: 1px solid red;
     }
-    .zr-error-message{
+    .nv-error-message{
       display: block;
       font-size: 14px;
       color: #E2231A;
     }
   }
-  .zr-error-message{
+  .nv-error-message{
     display: none;
   }
 }
 .c-demo{
-  .zr-form{
-    .zr-checkbox-module{
+  .nv-form{
+    .nv-checkbox-module{
       margin-right: 10px;
     }
   }
