--- a/src/less/inner/modules/nav_geekblue.less
+++ b/src/less/inner/modules/nav_geekblue.less
@@ -1,4 +1,4 @@
-.@{zr-prefix}-nav-geekblue{
+.@{nv-prefix}-nav-geekblue{
   /*
  * nav
  */
@@ -46,7 +46,7 @@
   }
 
   /**************** 横向nav *****************/
-  .@{zr-prefix}-nav-horizontal {
+  .@{nv-prefix}-nav-horizontal {
     background-color: @nav-color-item;
     display: inline-block;
     font-size: 0;
@@ -56,7 +56,7 @@
       display: block;
     }
 
-    .@{zr-prefix}-nav-item {
+    .@{nv-prefix}-nav-item {
       .nav-item-basic();
       color: @nav-color-basic;
       display: inline-block;
@@ -68,7 +68,7 @@
       color: @nav-color-basic;
     }
 
-    .@{zr-prefix}-nav-item:hover {
+    .@{nv-prefix}-nav-item:hover {
       > a{
         color: @nav-color-current;
       }
@@ -77,7 +77,7 @@
     }
 
     //selected menu
-    .@{zr-prefix}-nav-selected {
+    .@{nv-prefix}-nav-selected {
       color: @nav-color-current;
       background: @nav-color-active;
     }
@@ -94,40 +94,40 @@
       font-size: @font-size-base;
     }
 
-    .@{zr-prefix}-nav-menu,
-    .@{zr-prefix}-nav-leaves {
+    .@{nv-prefix}-nav-menu,
+    .@{nv-prefix}-nav-leaves {
       background: @nav-color-menu;
     }
 
     //normal 2
-    .@{zr-prefix}-nav-menu {
+    .@{nv-prefix}-nav-menu {
       position: absolute;
       left: 0;
       z-index: @dropdown-zindex;
       top: @font-size-base + 26px;
       .nav-shadow();
-      .@{zr-prefix}-nav-item {
+      .@{nv-prefix}-nav-item {
         display: block;
         color: @nav-color-menu-item;
         a{
           color: @nav-color-menu-item;
         }
       }
-      .@{zr-prefix}-nav-item:hover {
+      .@{nv-prefix}-nav-item:hover {
         color: @nav-color-menu-item;
         background-color: @nav-color-item-hover;
       }
     }
 
     //normal 3
-    .@{zr-prefix}-nav-leaves {
+    .@{nv-prefix}-nav-leaves {
       //background: @nav-color-menu;
       position: absolute;
       left: 104%;
       top: 0;
       display: none;
       .nav-shadow();
-      .@{zr-prefix}-nav-item,.@{zr-prefix}-nav-item:hover {
+      .@{nv-prefix}-nav-item,.@{nv-prefix}-nav-item:hover {
         a,a:hover {
           color: @nav-color-menu-item;
         }
@@ -136,47 +136,47 @@
   }
 
   //normal 2
-  .@{zr-prefix}-nav-menu {
+  .@{nv-prefix}-nav-menu {
     display: none;
     //background: @nav-item-normal-bg;
-    > .@{zr-prefix}-nav-item {
+    > .@{nv-prefix}-nav-item {
       display: block;
     }
-    .@{zr-prefix}-nav-item:hover {
+    .@{nv-prefix}-nav-item:hover {
       color: @nav-text-color;
       //background: @nav-item-normal-bg;w
     }
-    .@{zr-prefix}-nav-show {
-      .@{zr-prefix}-nav-leaves {
+    .@{nv-prefix}-nav-show {
+      .@{nv-prefix}-nav-leaves {
         display: inline-block;
       }
     }
   }
 
   //normal 3
-  .@{zr-prefix}-nav-leaves {
+  .@{nv-prefix}-nav-leaves {
     //background: @nav-item-normal-bg;
     display: none;
-    .@{zr-prefix}-nav-item:hover {
+    .@{nv-prefix}-nav-item:hover {
       a, a:hover {
         color: @nav-text-color; //gray
       }
     }
   }
 
-  .@{zr-prefix}-nav-show {
-    > .zr-nav-subtitle {
+  .@{nv-prefix}-nav-show {
+    > .nv-nav-subtitle {
       > [class*=" @{iconfont-css-prefix}-arrow-down"], [class^="@{iconfont-css-prefix}-arrow-down"] {
         transform: rotate(180deg);
       }
     }
-    .@{zr-prefix}-nav-menu {
+    .@{nv-prefix}-nav-menu {
       display: block;
     }
   }
 
   /**************** tree nav *****************/
-  .@{zr-prefix}-nav-tree{
+  .@{nv-prefix}-nav-tree{
     width: 200px;
     background: @nav-item-normal-bg;
     /*  a{
@@ -184,7 +184,7 @@
         color: @nav-text-color;
       }*/
 
-    .@{zr-prefix}-nav-subtitle {
+    .@{nv-prefix}-nav-subtitle {
       padding: 0 16px 0 16px;
       position: relative;
       color: @nav-text-color;
@@ -196,8 +196,8 @@
       }
     }
 
-    .@{zr-prefix}-nav-selected {
-      //> .@{zr-prefix}-nav-subtitle {
+    .@{nv-prefix}-nav-selected {
+      //> .@{nv-prefix}-nav-subtitle {
       border-right: 2px solid @nav-border-color;
       //color: @nav-text-current-color;
       background: @nav-item-hover-bg;
@@ -228,8 +228,8 @@
       top: 1px;
     }
 
-    .@{zr-prefix}-nav-menu {
-      .@{zr-prefix}-nav-subtitle {
+    .@{nv-prefix}-nav-menu {
+      .@{nv-prefix}-nav-subtitle {
         padding: 0 16px 0 36px;
       }
       /*&:hover {
@@ -237,33 +237,33 @@
       }*/
     }
 
-    .@{zr-prefix}-nav-item {
+    .@{nv-prefix}-nav-item {
       color: @nav-text-color;
       display: block;
       height: auto;
       padding: 0;
     }
 
-    .@{zr-prefix}-nav-item:hover {
+    .@{nv-prefix}-nav-item:hover {
       .tree-item-hover();
       //color: @nav-text-color;
     }
 
 
 
-    .@{zr-prefix}-nav-leaves {
+    .@{nv-prefix}-nav-leaves {
       position: static;
       left: 0;
       box-shadow: none;
       width: 100%;
-      .@{zr-prefix}-nav-subtitle {
+      .@{nv-prefix}-nav-subtitle {
         padding: 0 16px 0 56px;
       }
     }
   }
 
-  .@{zr-prefix}-nav-disable {
-    > .@{zr-prefix}-nav-subtitle {
+  .@{nv-prefix}-nav-disable {
+    > .@{nv-prefix}-nav-subtitle {
       .nav-disable();
       &:hover {
         .nav-disable();
@@ -275,8 +275,8 @@
   }
 
   //侧边导航公用选中状态
-  .@{zr-prefix}-nav-selected {
-    .@{zr-prefix}-nav-subtitle {
+  .@{nv-prefix}-nav-selected {
+    .@{nv-prefix}-nav-subtitle {
       //color: @nav-text-color;
       color: @nav-text-active-color;
       &:hover {
@@ -286,7 +286,7 @@
   }
 
   /**************** collapsed nav  *****************/
-  .@{zr-prefix}-nav-collapsed {
+  .@{nv-prefix}-nav-collapsed {
     width: 64px;
     [class*="@{iconfont-css-prefix}-"],
     [class^="@{iconfont-css-prefix}-"] {
@@ -304,31 +304,31 @@
       opacity: 0;
     }
 
-    .zr-nav-subtitle {
+    .nv-nav-subtitle {
       > [class*=" @{iconfont-css-prefix}-arrow-down"], [class^="@{iconfont-css-prefix}-arrow-down"] {
         transform: rotate(-90deg);
       }
     }
 
-    .@{zr-prefix}-nav-subtitle {
+    .@{nv-prefix}-nav-subtitle {
       padding: 0 16px;
     }
 
-    > .@{zr-prefix}-nav-item {
+    > .@{nv-prefix}-nav-item {
       position: relative;
       height: 40px;
       border: 0 none;
-      > .@{zr-prefix}-nav-subtitle {
+      > .@{nv-prefix}-nav-subtitle {
         padding: 0 @padding-lg;
-        > .@{zr-prefix}-nav-subset-title {
+        > .@{nv-prefix}-nav-subset-title {
           display: none;
         }
       }
     }
 
-    > .@{zr-prefix}-nav-selected {
+    > .@{nv-prefix}-nav-selected {
       //.collapsed-item-active();
-      > .@{zr-prefix}-nav-subtitle {
+      > .@{nv-prefix}-nav-subtitle {
         .collapsed-item-active();
         [class*="@{iconfont-css-prefix}-arrow-right"],
         [class^="@{iconfont-css-prefix}-arrow-right"] {
@@ -341,10 +341,10 @@
       }
     }
 
-    > .@{zr-prefix}-nav-selected:hover {
-      .@{zr-prefix}-nav-selected {
-        .@{zr-prefix}-nav-item,
-        .@{zr-prefix}-nav-subtitle {
+    > .@{nv-prefix}-nav-selected:hover {
+      .@{nv-prefix}-nav-selected {
+        .@{nv-prefix}-nav-item,
+        .@{nv-prefix}-nav-subtitle {
           color: @nav-collapsed-acitve-text;
           background-color: @nav-collapsed-item-hover;
           &:hover {
@@ -357,7 +357,7 @@
       }
     }
 
-    .@{zr-prefix}-nav-menu {
+    .@{nv-prefix}-nav-menu {
       .nav-shadow();
       //opacity: 0;
       display: none;
@@ -368,14 +368,14 @@
         opacity: 1;
       }
 
-      .@{zr-prefix}-nav-item {
+      .@{nv-prefix}-nav-item {
         border: 0 none;
         position: relative;
         min-width: 120px;
         //color: @nav-collapsed-menu-text;
         background-color: @nav-collapsed-menu-bg;
       }
-      .@{zr-prefix}-nav-subtitle {
+      .@{nv-prefix}-nav-subtitle {
         //background-color: @nav-text-current-color;
         padding: 0 16px;
         color: @nav-collapsed-menu-text;
@@ -386,8 +386,8 @@
           background-color: @nav-collapsed-item-hover;
         }
       }
-      .@{zr-prefix}-nav-selected {
-        .@{zr-prefix}-nav-subtitle {
+      .@{nv-prefix}-nav-selected {
+        .@{nv-prefix}-nav-subtitle {
           background-color: @nav-collapsed-item-hover;
           color: @nav-collapsed-acitve-text;
           &:hover {
@@ -398,18 +398,18 @@
       }
     }
 
-    .@{zr-prefix}-nav-leaves {
+    .@{nv-prefix}-nav-leaves {
       .nav-shadow();
       position: absolute;
       top: 0;
       left: 104%;
       display: none;
       //background-color: @nav-collapsed-menu-bg;
-      .@{zr-prefix}-nav-item:hover {
+      .@{nv-prefix}-nav-item:hover {
         background: @nav-item-hover-bg;
         color: @nav-collapsed-menu-text;
       }
-      .@{zr-prefix}-nav-subtitle {
+      .@{nv-prefix}-nav-subtitle {
         &:hover {
           background: @nav-collapsed-item-hover;
           color: @nav-collapsed-menu-text;
@@ -417,8 +417,8 @@
       }
     }
 
-    .@{zr-prefix}-nav-show {
-      .@{zr-prefix}-nav-menu {
+    .@{nv-prefix}-nav-show {
+      .@{nv-prefix}-nav-menu {
         display: block;
         position: absolute;
         left: 112%;
@@ -426,15 +426,15 @@
         top: 0;
         .nav-shadow();
       }
-      > .@{zr-prefix}-nav-leaves {
+      > .@{nv-prefix}-nav-leaves {
         display: block;
       }
     }
   }
 
 
-  .@{zr-prefix}-nav-demo-wrap{
-    .@{zr-prefix}-btn-primary{
+  .@{nv-prefix}-nav-demo-wrap{
+    .@{nv-prefix}-btn-primary{
       background: @nav-collapsed-current-bg;
       border:1px solid @nav-text-active-color;
     }
