--- a/src/less/inner/modules/page.less
+++ b/src/less/inner/modules/page.less
@@ -1,10 +1,10 @@
-.zr-page{
+.nv-page{
   text-align: center;
-  .zr-page-common{
+  .nv-page-common{
     display: inline-block;
   }
   //完整分页样式
-  .zr-complete-page{
+  .nv-complete-page{
     line-height: 32px;
     a,span{
       margin-right: 4px;
@@ -66,7 +66,7 @@
     }
   }
   //简单分页样式
-  .zr-simple-page{
+  .nv-simple-page{
     line-height: 24px;
     font-size: @font-size-sm ;
     .prev,.next{
@@ -95,7 +95,7 @@
       height: 24px;
       line-height: 24px;
     }
-    .zr-page-select{
+    .nv-page-select{
       margin-left: 16.5px;
       height: 24px;
       line-height: 24px;
@@ -109,12 +109,12 @@
     }
   }
   //mini分页样式
-  .zr-mini-page{
+  .nv-mini-page{
     line-height: 24px;
     .prev,.next{
       color: @grey-8;
     }
-    .zr-mini-text{
+    .nv-mini-text{
       display: inline-block;
       color: @grey-8;
       font-size: @font-size-sm ;
@@ -144,7 +144,7 @@
     border: @border-width-base  @border-style-base @normal-color;
     .border-radius(@border-radius-base);
   }
-  .zr-jump{
+  .nv-jump{
     display: inline-block;
     padding: 0 13px;
     font-size: @font-size-sm;
@@ -162,7 +162,7 @@
     }
   }
   //总页数样式通用
-  .zr-total-page{
+  .nv-total-page{
     display: inline !important;
     background: @component-background !important;
     color: @grey-7 !important;
@@ -171,7 +171,7 @@
     font-size: @font-size-sm;
   }
   //切换分页下拉框通用
-  .zr-page-select{
+  .nv-page-select{
     display: inline-block;
     vertical-align: top;
     position: relative;
@@ -225,7 +225,7 @@
       }
     }
   }
-  .zr-jump-text{
+  .nv-jump-text{
     margin-left: 24px;
     display: inline-block;
     font-size: @font-size-sm ;
