--- a/src/less/inner/modules/photo.less
+++ b/src/less/inner/modules/photo.less
@@ -1,7 +1,7 @@
 ﻿/*
  * photo
 */
-.@{zr-prefix}-photo{
+.@{nv-prefix}-photo{
   display: inline-block;
   width: @btn-height-base;
   height: @btn-height-base;
@@ -11,7 +11,7 @@
   text-align: center;
   color: #fff;
   font-size: @font-size-base;
-  [class^="zricon-"],  [class*=" zricon-"] {
+  [class^="nvicon-"],  [class*=" nvicon-"] {
     font-size: 16px;
     color: #fff;
     display: inline-block;
@@ -24,55 +24,55 @@
   }
 }
 
-.@{zr-prefix}-photo-circle{
+.@{nv-prefix}-photo-circle{
   border-radius: 50%;
   overflow: hidden;
 }
-.@{zr-prefix}-photo-lg{
+.@{nv-prefix}-photo-lg{
   width: @btn-height-lg;
   height: @btn-height-lg;
   line-height: @btn-height-lg;
-  [class^="zricon-"] {
+  [class^="nvicon-"] {
     height: @btn-height-lg;
     line-height: @btn-height-lg;
     font-size: @spin-dot-size;
   }
 }
-.@{zr-prefix}-photo-sm{
+.@{nv-prefix}-photo-sm{
   width: @btn-height-sm;
   height: @btn-height-sm;
   line-height: @btn-height-sm;
-  [class^="zricon-"] {
+  [class^="nvicon-"] {
     height: @btn-height-sm;
     line-height: @btn-height-sm;
     font-size: @font-size-sm;
   }
 }
-.@{zr-prefix}-photo-db{
+.@{nv-prefix}-photo-db{
   background-color: @primary-color;
 }
-.@{zr-prefix}-photo-wb{
+.@{nv-prefix}-photo-wb{
   background-color: @primary-2;
-  [class^="zricon-"]{
+  [class^="nvicon-"]{
     color:@primary-color;
 
   }
 }
-.@{zr-prefix}-photo-do{
+.@{nv-prefix}-photo-do{
   background-color:#FF9101;
 }
-.@{zr-prefix}-photo-wo{
+.@{nv-prefix}-photo-wo{
   background-color: #FFE2A4;
   color:#FF9101;
-  [class^="zricon-"]{
+  [class^="nvicon-"]{
     color:#FF9101;
   }
 }
-/*.@{zr-prefix}-badge{
+/*.@{nv-prefix}-badge{
   width: @btn-height-base;
   height: @btn-height-base;
   position: relative;
-  .@{zr-prefix}-photo-badge{
+  .@{nv-prefix}-photo-badge{
     position: absolute;
     top: -10px;
     right: -10px;
@@ -85,7 +85,7 @@
     text-align: center;
     line-height: @badge-height;
   }
-  .@{zr-prefix}-photo-badge-sm{
+  .@{nv-prefix}-photo-badge-sm{
     position: absolute;
     top: -3px;
     right: -3px;
