--- a/src/less/inner/modules/table.less
+++ b/src/less/inner/modules/table.less
@@ -2,7 +2,7 @@
  * table
  */
 //基础样式图文横向排版
-.@{zr-prefix}-table-wrap {
+.@{nv-prefix}-table-wrap {
   border: @border-width-base @border-style-base @grey-4;
   border-radius: 4px;
   overflow: hidden;
@@ -45,17 +45,17 @@
       background-color: @geekblue-1;
     }
   }
-  .@{zr-prefix}-table-text-right {
+  .@{nv-prefix}-table-text-right {
     text-align: right;
   }
 }
 
-.@{zr-prefix}-table-wrap-border{
+.@{nv-prefix}-table-wrap-border{
   border: 0 none!important;
 }
 
 //批量操作
-.@{zr-prefix}-table-checkbox {
+.@{nv-prefix}-table-checkbox {
   th:nth-child(1), td:nth-child(1) {
     width: 36px;
     padding: 0 22px;
