--- a/src/less/inner/modules/timeline.less
+++ b/src/less/inner/modules/timeline.less
@@ -1,8 +1,8 @@
-﻿.@{zr-prefix}-timeline{
+﻿.@{nv-prefix}-timeline{
   padding-left: 5px;
 }
 
-.@{zr-prefix}-timeline-item{
+.@{nv-prefix}-timeline-item{
   position: relative;
   padding-bottom: 20px;
   &:after{
@@ -18,7 +18,7 @@
   &:last-child:after{
     display: none;
   }
-  [class*=" zricon-"],[class^=zricon-],.@{zr-prefix}-timeline-icon{
+  [class*=" nvicon-"],[class^=nvicon-],.@{nv-prefix}-timeline-icon{
     position: absolute;
     left:0;
     top:1px;
@@ -28,7 +28,7 @@
     font-size: 14px;
     color:@geekblue-6;
   }
-  .@{zr-prefix}-timeline-icon{
+  .@{nv-prefix}-timeline-icon{
     display: block;
     width:9px;
     height:9px;
@@ -45,35 +45,35 @@
     margin-bottom: 10px;
   }
 }
-.@{zr-prefix}-timeline-green{
-  .@{zr-prefix}-timeline-icon{
+.@{nv-prefix}-timeline-green{
+  .@{nv-prefix}-timeline-icon{
     border-color: @green-6;
     background: @green-2;
   }
-  [class*=" zricon-"],[class^=zricon-]{
+  [class*=" nvicon-"],[class^=nvicon-]{
     color:@green-6;
   }
 }
-.@{zr-prefix}-timeline-warning{
-  .@{zr-prefix}-timeline-icon{
+.@{nv-prefix}-timeline-warning{
+  .@{nv-prefix}-timeline-icon{
     border-color: @orange-6;
     background: @orange-2;
   }
-  [class*=" zricon-"],[class^=zricon-]{
+  [class*=" nvicon-"],[class^=nvicon-]{
     color:@orange-6;
   }
 }
-.@{zr-prefix}-timeline-error{
-  .@{zr-prefix}-timeline-icon{
+.@{nv-prefix}-timeline-error{
+  .@{nv-prefix}-timeline-icon{
     border-color: @red-6;
     background: @red-2;
   }
-  [class*=" zricon-"],[class^=zricon-]{
+  [class*=" nvicon-"],[class^=nvicon-]{
     color:@red-6;
   }
 }
 
-.@{zr-prefix}-timeline-content{
+.@{nv-prefix}-timeline-content{
   padding-left: 25px;
   line-height: 1.5;
   font-weight: 200;
