--- a/src/less/inner/modules/top.less
+++ b/src/less/inner/modules/top.less
@@ -2,9 +2,9 @@
  * top
  */
 
-.@{zr-prefix}-top {
+.@{nv-prefix}-top {
   width: @btn-height-lg;
-  .@{zr-prefix}-btn {
+  .@{nv-prefix}-btn {
     width: @btn-height-lg;
     background-color: @top-primary-bg;
     font-size: @font-size-lg;
@@ -18,7 +18,7 @@
   }
 
 
-  .@{zr-prefix}-btn [class^="zricon-"] {
+  .@{nv-prefix}-btn [class^="nvicon-"] {
     display: inline-block;
     font-size: @top-font-size;
     width: @top-font-size;
@@ -32,8 +32,8 @@
 /*
  * 自定义
 */
-.@{zr-prefix}-top-custom {
-  .@{zr-prefix}-btn {
+.@{nv-prefix}-top-custom {
+  .@{nv-prefix}-btn {
     background-color: @primary-color;
     border-radius: 50%;
     padding: 0;
