--- a/src/less/inner/theme/default.less
+++ b/src/less/inner/theme/default.less
@@ -1,7 +1,7 @@
 
 @import "../color/colors";
 
-@zr-prefix             : zr;
+@nv-prefix             : nv;
 
 // -------- Colors -----------
 @primary-color          : @geekblue-6;
@@ -91,8 +91,8 @@
 @item-hover-bg          : @primary-1;
 
 // ICONFONT
-@iconfont-css-prefix    : zricon;
-@icon-url               : "http://zr.jd.com";
+@iconfont-css-prefix    : nvicon;
+@icon-url               : "http://nv.jd.com";
 
 // LINK
 @link-color             : @primary-color;
