--- a/src/less/inner/modules/grid.less
+++ b/src/less/inner/modules/grid.less
@@ -3,23 +3,23 @@
   display: block;
   position: relative;
 }
-.@{zr-prefix}-row,.@{zr-prefix}-row-space{
+.@{nv-prefix}-row,.@{nv-prefix}-row-space{
   display: block;
   height: auto;
   margin: 0;
   position: relative;
 }
-.@{zr-prefix}-row-space{
+.@{nv-prefix}-row-space{
   margin: 0 -5px;
 }
-.@{zr-prefix}-col-space,.col-space-demo{
+.@{nv-prefix}-col-space,.col-space-demo{
   padding: 0 5px;
 }
-.@{zr-prefix}-row::after,.@{zr-prefix}-row::before,.@{zr-prefix}-row-space::after,.@{zr-prefix}-row-space::before{
+.@{nv-prefix}-row::after,.@{nv-prefix}-row::before,.@{nv-prefix}-row-space::after,.@{nv-prefix}-row-space::before{
   content:" ";
   display: table;
 }
-.@{zr-prefix}-row::after,.@{zr-prefix}-row-space::after{
+.@{nv-prefix}-row::after,.@{nv-prefix}-row-space::after{
   clear: both;
   visibility: hidden;
   font-size: 0;
@@ -27,20 +27,20 @@
 }
 /*!css float layout*/
 .generate-columns(@n, @i:1) when(@i <= @n){
-  .@{zr-prefix}-col-@{i} {
+  .@{nv-prefix}-col-@{i} {
     width: (100%/@n) * @i;
     .col-demo();
   }
   //空隙栅格算法
-  .@{zr-prefix}-row-space > .@{zr-prefix}-col-@{i}{
+  .@{nv-prefix}-row-space > .@{nv-prefix}-col-@{i}{
     .col-space-demo();
   }
   //外边距算法
-  .@{zr-prefix}-col-offset-@{i}{
+  .@{nv-prefix}-col-offset-@{i}{
     margin-left:100%*@i/@n
   }
   //flex排序算法
-  .@{zr-prefix}-col-flex-order-@{i}{
+  .@{nv-prefix}-col-flex-order-@{i}{
     order:@i;
   }
   .generate-columns(@n, (@i + 1));
@@ -48,50 +48,50 @@
 .generate-columns(@grid-columns);
 
 /*!css flex layout*/
-.@{zr-prefix}-row-flex,.@{zr-prefix}-row-flex::before,.@{zr-prefix}-row-flex::after{
+.@{nv-prefix}-row-flex,.@{nv-prefix}-row-flex::before,.@{nv-prefix}-row-flex::after{
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   flex-flow:row wrap;
 }
-.@{zr-prefix}-row-flex-start{
+.@{nv-prefix}-row-flex-start{
   justify-content:flex-start;
 }
-.@{zr-prefix}-row-flex-end{
+.@{nv-prefix}-row-flex-end{
   justify-content:flex-end;
 }
-.@{zr-prefix}-row-flex-center{
+.@{nv-prefix}-row-flex-center{
   justify-content:center;
 }
-.@{zr-prefix}-row-flex-between{
+.@{nv-prefix}-row-flex-between{
   justify-content:space-between;
 }
-.@{zr-prefix}-row-flex-around{
+.@{nv-prefix}-row-flex-around{
   justify-content:space-around;
 }
-.@{zr-prefix}-row-flex-top{
+.@{nv-prefix}-row-flex-top{
   align-items: flex-start;
 }
-.@{zr-prefix}-row-flex-middle{
+.@{nv-prefix}-row-flex-middle{
   align-items:center;
 }
-.@{zr-prefix}-row-flex-bottom{
+.@{nv-prefix}-row-flex-bottom{
   align-items:flex-end;
 }
-.@{zr-prefix}-row-flex-stretch{
+.@{nv-prefix}-row-flex-stretch{
   align-items:stretch;
 }
-.@{zr-prefix}-col-flex-top{
+.@{nv-prefix}-col-flex-top{
   align-self:flex-start;
 }
-.@{zr-prefix}-col-flex-middle{
+.@{nv-prefix}-col-flex-middle{
   align-self:center;
 }
-.@{zr-prefix}-col-flex-bottom{
+.@{nv-prefix}-col-flex-bottom{
   align-self:flex-end;
 }
-.@{zr-prefix}-col-flex-stretch{
+.@{nv-prefix}-col-flex-stretch{
   align-self:stretch;
 }
 
@@ -99,11 +99,11 @@
 .mixin(@name,@type) when (@name = @xs-name) and (@type = @screen-name-grid) {
   //默认手机
   .generate-columns(@n, @i: 1) when (@i =< @n) {
-    .@{zr-prefix}-col-xs-@{i} {
+    .@{nv-prefix}-col-xs-@{i} {
       width: (@i * 100% / @n);
       .col-demo();
     }
-    .@{zr-prefix}-row-space > .@{zr-prefix}-col-xs-@{i}{
+    .@{nv-prefix}-row-space > .@{nv-prefix}-col-xs-@{i}{
       .col-space-demo();
     }
     .generate-columns(@n, (@i + 1));
@@ -113,11 +113,11 @@
 .mixin(@name,@type) when (@name = @sm-name) and (@type = @screen-name-grid) {
   //平板
   .generate-columns(@n, @i: 1) when (@i =< @n) {
-    .@{zr-prefix}-col-sm-@{i} {
+    .@{nv-prefix}-col-sm-@{i} {
       width: (@i * 100% / @n);
       .col-demo();
     }
-    .@{zr-prefix}-row-space > .@{zr-prefix}-col-sm-@{i}{
+    .@{nv-prefix}-row-space > .@{nv-prefix}-col-sm-@{i}{
       .col-space-demo();
     }
     .generate-columns(@n, (@i + 1));
@@ -127,11 +127,11 @@
 .mixin(@name,@type) when (@name = @md-name) and (@type = @screen-name-grid) {
   //桌面显示器
   .generate-columns(@n, @i: 1) when (@i =< @n) {
-    .@{zr-prefix}-col-md-@{i} {
+    .@{nv-prefix}-col-md-@{i} {
       width: (@i * 100% / @n);
       .col-demo();
     }
-    .@{zr-prefix}-row-space > .@{zr-prefix}-col-md-@{i}{
+    .@{nv-prefix}-row-space > .@{nv-prefix}-col-md-@{i}{
       .col-space-demo();
     }
     .generate-columns(@n, (@i + 1));
@@ -141,11 +141,11 @@
 .mixin(@name,@type) when (@name = @lg-name) and (@type = @screen-name-grid) {
   //大桌面显示器
   .generate-columns(@n, @i: 1) when (@i =< @n) {
-    .@{zr-prefix}-col-lg-@{i} {
+    .@{nv-prefix}-col-lg-@{i} {
       width: (@i * 100% / @n);
       .col-demo();
     }
-    .@{zr-prefix}-row-space > .@{zr-prefix}-col-lg-@{i}{
+    .@{nv-prefix}-row-space > .@{nv-prefix}-col-lg-@{i}{
       .col-space-demo();
     }
     .generate-columns(@n, (@i + 1));
@@ -155,11 +155,11 @@
 .mixin(@name,@type) when (@name = @xl-name) and (@type = @screen-name-grid) {
   //大屏慕数据展示
   .generate-columns(@n, @i: 1) when (@i =< @n) {
-    .@{zr-prefix}-col-xl-@{i} {
+    .@{nv-prefix}-col-xl-@{i} {
       width: (@i * 100% / @n);
       .col-demo();
     }
-    .@{zr-prefix}-row-space > .@{zr-prefix}-col-xl-@{i}{
+    .@{nv-prefix}-row-space > .@{nv-prefix}-col-xl-@{i}{
       .col-space-demo();
     }
     .generate-columns(@n, (@i + 1));
