--- a/src/less/inner/modules/message.less
+++ b/src/less/inner/modules/message.less
@@ -1,7 +1,7 @@
 /*
  * message 全局提示
  */
-.zr-modal {
+.nv-modal {
   position: fixed;
   top: 0;
   right: 0;
@@ -17,38 +17,38 @@
 .fade.in {
   opacity: 1;
 }
-.zr-modal-dialog {
+.nv-modal-dialog {
   position: relative;
   width: 100%;
   height: 100%;
 }
-.zr-modal-content {
+.nv-modal-content {
   width: 396px;
   background: #ffffff;
   margin: 0 auto;
   border-radius: 4px;
   box-sizing: border-box;
 }
-.zr-modal-content > div {
+.nv-modal-content > div {
   padding: 0 24px;
   font-family: PingFangSC-Regular;
 }
-.zr-modal-header {
+.nv-modal-header {
   height: 40px;
   line-height: 40px;
   font-size: 16px;
   color: rgba(0,0,0,65);
 }
-.zr-modal-close {
+.nv-modal-close {
   float: right;
   font-size: 14px;
   cursor: pointer;
   opacity: 0.45;
 }
-.zr-modal-close:hover {
+.nv-modal-close:hover {
   opacity: 0.65;
 }
-.zr-modal-body {
+.nv-modal-body {
   font-size: 14px;
   color: rgba(0,0,0,65);
   line-height: 21px;
@@ -56,67 +56,67 @@
   border-bottom: 1px solid #F5F5F5;
   zoom: 1;
 }
-.zr-modal-body:after {
+.nv-modal-body:after {
   content: "";
   display: block;
   height: 0;
   clear: both;
 }
-.zr-modal-prompt .zr-modal-body,
-.zr-modal-enter .zr-modal-body {
+.nv-modal-prompt .nv-modal-body,
+.nv-modal-enter .nv-modal-body {
   min-height: 106px;
   padding-top: 32px;
 }
-.zr-modal-prompt .zr-modal-body i,
-.zr-modal-enter .zr-modal-body i {
+.nv-modal-prompt .nv-modal-body i,
+.nv-modal-enter .nv-modal-body i {
   font-size: 14px;
   margin-right: 8px;
 }
-.zr-modal-submit input[type="text"],
-.zr-modal-submit-async input[type="text"] {
+.nv-modal-submit input[type="text"],
+.nv-modal-submit-async input[type="text"] {
   width: 78%;
 }
-.zr-modal-submit form,
-.zr-modal-submit-async form {
+.nv-modal-submit form,
+.nv-modal-submit-async form {
   padding: 24px 0 24px 16px;
 }
-.zr-modal-submit form > div:first-of-type,
-.zr-modal-submit-async form > div:first-of-type {
+.nv-modal-submit form > div:first-of-type,
+.nv-modal-submit-async form > div:first-of-type {
   margin-bottom: 24px;
 }
-.zr-modal-submit label,
-.zr-modal-submit-async label {
+.nv-modal-submit label,
+.nv-modal-submit-async label {
   margin-right: 16px;
 }
-.zr-modal-footer {
+.nv-modal-footer {
   height: 56px;
   line-height: 56px;
   font-size: 0;
   text-align: right;
 }
-.zr-modal-btn {
+.nv-modal-btn {
   vertical-align: middle;
   width: 77px;
 }
-.zr-modal-enter {
+.nv-modal-enter {
   margin-left: 8px;
 }
-.zr-modal-info {
+.nv-modal-info {
   color: #4363f4;
 }
-.zr-modal-ok {
+.nv-modal-ok {
   color: #6CC902;
 }
-.zr-modal-warning {
+.nv-modal-warning {
   color: #faad14;
 }
-.zr-modal-error {
+.nv-modal-error {
   color: #E2231A;
 }
 .prompt_content {
   display: inline-block;
 }
-.zr-modal-icon {
+.nv-modal-icon {
   float: left;
 }
 .prompt-content {
@@ -124,55 +124,55 @@
   float: left;
   margin-left: 10px;
 }
-.zr-modal-status .zr-modal-body {
+.nv-modal-status .nv-modal-body {
   border: none;
   margin-bottom: 32px;
 }
-.zr-modal-status .zr-modal-body p {
+.nv-modal-status .nv-modal-body p {
   line-height: 20px;
 }
-.zr-modal-status .zr-modal-body .prompt-content-title {
+.nv-modal-status .nv-modal-body .prompt-content-title {
   font-weight: bold;
   margin-bottom: 8px;
   font-size: 14px;
   color: rgba(0,0,0,65);
 }
-.zr-modal-status .zr-modal-footer {
+.nv-modal-status .nv-modal-footer {
   height: auto;
   line-height: 0;
   padding-bottom: 40px;
 }
-.zr-modal-submit-async .zr-modal-loading {
+.nv-modal-submit-async .nv-modal-loading {
   margin-right: 5px;
 }
-.zr-modal .zr-modal-body {
+.nv-modal .nv-modal-body {
   padding: 32px 24px;
 }
-.zr-modal-footer-center {
+.nv-modal-footer-center {
   text-align: center;
 }
-.zr-modal-lg .zr-modal-content {
+.nv-modal-lg .nv-modal-content {
   width: 800px;
 }
-.zr-modal-normal .zr-modal-content {
+.nv-modal-normal .nv-modal-content {
   width: 600px;
 }
-.zr-modal-sm .zr-modal-content {
+.nv-modal-sm .nv-modal-content {
   width: 400px;
 }
 @media (max-width: 479px) {
-  .zr-modal .zr-modal-content {
+  .nv-modal .nv-modal-content {
     width: 100%;
   }
 }
 @media screen and (min-width: 480px) and (max-width: 992px) {
-  .zr-modal .zr-modal-content {
+  .nv-modal .nv-modal-content {
     width: 80%;
   }
 }
 
 //
-.@{zr-prefix}-message{
+.@{nv-prefix}-message{
   display: none;
   position: fixed;
   top: 50px;
@@ -181,11 +181,11 @@
   text-align: center;
   z-index: 10000;
 }
-.@{zr-prefix}-message-notice{
+.@{nv-prefix}-message-notice{
   padding: 4px;
   text-align: center;
 }
-.@{zr-prefix}-message-custom{
+.@{nv-prefix}-message-custom{
   display: inline-block;
   padding: @padding-xs + 1px  @padding-md;
   border-radius: 4px;
@@ -196,19 +196,19 @@
   color: @text-color;
   line-height: @font-size-base;
 }
-.@{zr-prefix}-message-custom > [class^="zricon-"]{
+.@{nv-prefix}-message-custom > [class^="nvicon-"]{
   margin-right: @padding-xs;
 }
-.@{zr-prefix}-message-info > [class^="zricon-"]{
+.@{nv-prefix}-message-info > [class^="nvicon-"]{
   color: @info-6;
 }
-.@{zr-prefix}-message-success > [class^="zricon-"]{
+.@{nv-prefix}-message-success > [class^="nvicon-"]{
   color: @success-6;
 }
-.@{zr-prefix}-message-warning > [class^="zricon-"]{
+.@{nv-prefix}-message-warning > [class^="nvicon-"]{
   color: @warning-6;
 }
-.@{zr-prefix}-message-error > [class^="zricon-"]{
+.@{nv-prefix}-message-error > [class^="nvicon-"]{
   color: @error-6;
 }
 
